# Ozon-Bank-Manager-Trainer

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/Ozon-Bank-Manager-Trainer/: docker-compose.yml
backend/Ozon-Bank-Manager-Trainer/backend/: main.py  pyproject.toml
backend/Ozon-Bank-Manager-Trainer/backend/components/: client_config.py  context.py  database.py  llm.py  orchestrator.py
backend/Ozon-Bank-Manager-Trainer/backend/llm_judge/: README.md  judge.py  parser.py
backend/Ozon-Bank-Manager-Trainer/backend/llm_judge/backends/: mock_backend.py  openrouter_backend.py
backend/Ozon-Bank-Manager-Trainer/backend/llm_judge/prompts/: judge_prompt.md
backend/Ozon-Bank-Manager-Trainer/frontend/: Dockerfile  pyproject.toml
backend/Ozon-Bank-Manager-Trainer/frontend/.streamlit/: config.toml
backend/Ozon-Bank-Manager-Trainer/stt_service/: Dockerfile  main.py  pyproject.toml
backend/Ozon-Bank-Manager-Trainer/tts_service/: main.py  pyproject.toml
backend/Ozon-Bank-Manager-Trainer/tts_service/components/: tts.py
backend/components/: audio_utils.py  client_config.py  context.py  database.py  dialogue_prompts.py  judge_client.py  llm.py  orchestrator.py  session_manager.py  stt_client.py  tts_client.py  utils.py  vad_detector.py
backend/llm_judge/: app.py  client_classifier.py  database.py  judge.py  prompt_builder.py
backend/llm_judge/backends/: ollama_backend.py
backend/llm_judge/prompts/: judge_prompt.md
backend/llm_judge/spec/: evaluation_spec.json
backend/prompts/: ozon_rko_new_seller.md
backend/scenarios/: ozon_rko_new_seller.json
frontend/: Dockerfile  README.md  app.py  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
judge/: requirements.txt
judge/src/llm_judge/: database.py
judge_legacy/src_legacy/llm_judge/: app.py  client_classifier.py  judge.py  models.py  parser.py
judge_legacy/src_legacy/llm_judge/spec/: README.md  compliance_phrases.md
judge_legacy/src_legacy/llm_judge/tests/: test_judge.py
judge_service/: Dockerfile  database.py  judge.py  main.py  prompt_builder.py  pyproject.toml
judge_service/backends/: ollama_backend.py  openrouter_backend.py
judge_service/spec/: evaluation_spec.json
judge_service/tests/: conftest.py  test_judge.py
product_research/: README.md  dialogue_simulator.py  explanation_of_parameters.txt  generate_dataset.py  llm_dialogue.py  results.txt  sample_dialogues  silero-model.ipynb  whisper_stream_from_file.py
product_research/data/synthetic/: README.md  ozon_dialogs.jsonl  ozon_dialogs_novice.jsonl
product_research/docs/architecture/: latency_and_performance.md
product_research/docs/compliance/: compliance_phrases.md
product_research/docs/product/: 01_product_vision.md  02_functional_requirements.md  03_user_scenarios.md  04_evaluation_criteria.md
product_research/docs/ux/: UX_coach.md  UX_manager.md
product_research/research/: speech_models_overview.md
product_research/scenarios/: README.md
product_research/scenarios/b2b/: ozon_rko_new_seller.json
product_research/scenarios/resilience/: ozon_stress_resilience.json
product_research/src/prompts/dialog_agent/: ozon_rko_new_seller.md  ozon_stress_resilience.md
stt_service/: Dockerfile  main.py  pyproject.toml
stt_service/components/: stt.py
tts_service/: Dockerfile  main.py
tts_service/components/: tts.py
