[tool.poetry]
name = "operator-voice-trainer-stt"
version = "0.1.0"
description = "STT service for Operator Voice Trainer"
authors = ["sssay10 <duvakin.k@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.0.0"
# STT dependencies
transformers = ">=4.30.0,<4.35.0"
torch = ">=2.0.0,<2.6.0"
torchaudio = ">=2.0.0,<2.6.0"
soundfile = "^0.12.1"
librosa = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

